# sfe_master_ops

./: .env.example  .gitignore  AGENTS.md  README.md  RUNBOOK.md  SKILL.md  STRUCTURE.md  crm_analysis_report.html  prescription_flow_template_v1.html  pyproject.toml  report_precision_v1.html  tmp_territory_debug.html
adapters/: public_data_configs.py
common/: asset_versions.py  company_onboarding_registry.py  company_profile.py  company_registry.py  company_runtime.py  config.py  exceptions.py  run_registry.py  supabase_client.py  types.py
docs/: 00_SFE_OPS_Master_Document_Index.md  09_Template_Payload_Spec.md  AGENTS.md  GUJAEHYUN.md  Main_WebSlide Architect v3.5.md  README.md  SALES_DATA_OS_DETAIL.md  TODO.md  index.md  raw-data-generation-plan.md
migrations/: 001_initial_schema.sql  002_run_based_schema.sql  003_company_registry_schema.sql
ops_core/: __init__.py  main.py
result_assets/: crm_result_asset.py  prescription_result_asset.py  radar_result_asset.py  sandbox_result_asset.py  territory_result_asset.py
scripts/: generate_daon_source_raw.py  generate_hangyeol_source_raw.py  generate_source_raw.py  migrate_company_source_filenames.py  normalize_crm_source.py  normalize_hangyeol_crm_source.py  normalize_hangyeol_prescription_source.py  normalize_hangyeol_sandbox_source.py  normalize_hangyeol_territory_source.py  normalize_prescription_source.py  normalize_sandbox_source.py  normalize_territory_source.py  render_hangyeol_sandbox_template.py  render_hangyeol_territory_template.py  render_sandbox_template.py  render_territory_template.py  validate_builder_with_ops.py  validate_crm_with_ops.py  validate_full_pipeline.py  validate_hangyeol_builder_with_ops.py  validate_hangyeol_crm_with_ops.py  validate_hangyeol_full_pipeline.py  validate_hangyeol_prescription_with_ops.py  validate_hangyeol_sandbox_with_ops.py  validate_hangyeol_territory_with_ops.py  validate_radar_with_ops.py  (+3 more)
(+365 files in other folders)
