[project]
name = "sfe-master-ops"
version = "0.1.0"
description = "SFE OPS - 5개 SFE 모듈을 Result Asset 중심으로 연결하는 중앙 운영 엔진"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.10.0",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.32.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
python_files = ["test_*.py"]
python_functions = ["test_*"]
