[project]
name = "sfe-master-ops"
version = "0.1.0"
description = "Sales Data OS for standardizing pharma sales data, calculating KPI, validating result assets, and delivering intelligence and builder outputs"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "polars>=0.20.0",
    "openpyxl>=3.1.0",
    "fastexcel>=0.10.0",
    "supabase>=2.3.0",
    "python-dotenv>=1.0.0",
    "streamlit>=1.32.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [
    "adapters",
    "common",
    "modules",
    "ops_core",
    "result_assets",
    "ui",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-p no:cacheprovider"
python_files = ["test_*.py"]
python_functions = ["test_*"]
